--- a/.github/workflows/gas-deploy.yml
+++ b/.github/workflows/gas-deploy.yml
@@ -76,7 +76,41 @@ jobs:
           if [ -z "$VER" ]; then echo "Cannot parse version"; exit 1; fi
           clasp deploy -i "$GAS_DEPLOY_ID" -V "$VER" -d "$DESC"
 
-      - name: Test deployed Web App
+      - name: Test deployed Web App (auto: anonymous → OAuth)
+        env:
+          URL: ${{ vars.GAS_WEBAPP_URL }}
         run: |
-          echo "Testing Web App..."
-          curl -L --fail "${{ vars.GAS_WEBAPP_URL }}"
+          set -e
+          echo "1) 試匿名請求..."
+          if curl -s -L --fail "$URL" -o resp.txt ; then
+            echo "✅ 匿名可存取"; head -c 1000 resp.txt || true; exit 0
+          fi
+          echo "2) 匿名失敗，改用 OAuth 權杖..."
+          # 從 ~/.clasprc.json 取 refresh_token / clientId / clientSecret 並換 access_token
+          node - <<'NODE'
+          const fs = require('fs'), https = require('https');
+          const cfg = JSON.parse(fs.readFileSync(process.env.HOME+'/.clasprc.json','utf8'));
+          const body = new URLSearchParams({
+            client_id: cfg.oauth2ClientSettings.clientId,
+            client_secret: cfg.oauth2ClientSettings.clientSecret,
+            refresh_token: cfg.token.refresh_token,
+            grant_type: 'refresh_token'
+          }).toString();
+          const opt = {hostname:'oauth2.googleapis.com', path:'/token', method:'POST',
+                       headers:{'Content-Type':'application/x-www-form-urlencoded',
+                                'Content-Length': Buffer.byteLength(body)}};
+          const req = https.request(opt, res => {
+            let buf=''; res.on('data',d=>buf+=d); res.on('end', ()=>{
+              try { const t = JSON.parse(buf).access_token;
+                if(!t) throw new Error(buf); fs.writeFileSync('ACCESS_TOKEN', t); console.log('✔ 取得 access_token'); }
+              catch(e){ console.error('Token response:', buf); process.exit(1); }
+            });
+          });
+          req.on('error', e=>{ console.error(e); process.exit(1); });
+          req.write(body); req.end();
+          NODE
+          ACCESS_TOKEN=$(cat ACCESS_TOKEN)
+          code=$(curl -s -o resp.txt -w "%{http_code}" -L -H "Authorization: Bearer $ACCESS_TOKEN" "$URL")
+          echo "HTTP $code"
+          head -c 1000 resp.txt || true
+          test "$code" -ge 200 -a "$code" -lt 400
